--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ passlib==1.7.4
 psycopg2-binary==2.9.11
 pydantic==2.12.0
 pydantic_core==2.41.1
+PyJWT==2.10.1
 python-dotenv==1.1.1
 python-multipart==0.0.20
 sniffio==1.3.1
